[package]
name = "ethabi"
version = "6.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
homepage = "https://github.com/paritytech/ethabi"
license = "MIT"
keywords = ["ethereum", "eth", "abi", "solidity", "cli"]
description = "Easy to use conversion of ethereum contract calls to bytecode."

[dependencies]
 rustc-hex = { git = "https://github.com/enigmampc/rustc-hex.git", rev = "sgx-2.0.1-v1.0.7" }
tiny-keccak = "1.3"
error-chain = { git = "https://github.com/enigmampc/error-chain.git", rev = "sgx-0.12.0-v1.0.7",  default-features = false }
ethereum-types = { git = "https://github.com/enigmampc/primitives.git", rev = "sgx-v0.4.0", default-features = false }

serde = { git = "https://github.com/baidu/rust-sgx-sdk.git", rev = "v1.0.7", features = ["derive"] }
serde_json = { git = "https://github.com/baidu/rust-sgx-sdk.git", rev = "v1.0.7" }
sgx_tstd = { git = "https://github.com/baidu/rust-sgx-sdk.git", rev = "v1.0.7" }



[dev-dependencies]
hex-literal = "0.1.1"

[features]
backtrace = ["error-chain/backtrace"]

[badges]
travis-ci = { repository = "paritytech/ethabi", branch = "master" }
coveralls = { repository = "paritytech/ethabi", branch = "master" }



