[package]
name = "ethabi"
version = "8.0.1"
authors = ["Parity Technologies <admin@parity.io>"]
homepage = "https://github.com/paritytech/ethabi"
license = "MIT/Apache-2.0"
keywords = ["ethereum", "eth", "abi", "solidity", "cli"]
description = "Easy to use conversion of ethereum contract calls to bytecode."

[dependencies]
 rustc-hex = { git = "https://github.com/enigmampc/rustc-hex.git", rev = "2.0.1-sgx-1.0.8" }
tiny-keccak = "1.4"
error-chain = { git = "https://github.com/enigmampc/error-chain.git", rev = "0.12.0-sgx-1.0.8",  default-features = false }
ethereum-types = { git = "https://github.com/enigmampc/primitives.git", rev = "0.5.2-sgx-v0.4.0", default-features = false }

serde = { git = "https://github.com/mesalock-linux/serde-sgx.git", rev = "407aaaa2558dda5c2367d57ba40324c52cf9acc2", features = ["derive"] }
serde_json = { git = "https://github.com/enigmampc/serde-json-sgx.git", rev = "1.0.39-sgx-1.0.8" }
sgx_tstd = { git = "https://github.com/baidu/rust-sgx-sdk.git", rev = "v1.0.8" }



[dev-dependencies]
hex-literal = "0.2.0"
paste = "0.1.5"

[features]
backtrace = ["error-chain/backtrace"]

[badges]
travis-ci = { repository = "paritytech/ethabi", branch = "master" }
coveralls = { repository = "paritytech/ethabi", branch = "master" }
